--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,7 @@
   --candy-peach-vibrant: #ffb380;
   --candy-lavender-vibrant: #d9b3ff;
   --candy-purple2: #ce80f5;
+  --purple-vibrant: #703ca0;
 
   /* Base Colors */
   --white: #ffffff;
